[package]
name = "address-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
ethers-core = "2.0.2"
ethers-signers = "2.0.2"
num_cpus = "1.15.0"
rand = "0.8.5"
